tests/expectations/compiler/ternary/ternary_mismatch_fail.out
DCE_ENABLED:
Error [ETYC0372118]: Received different types `u8` and `u16` for the arms of a ternary conditional.
    --> compiler-test:4:17
     |
   4 |         return (true ? 1u8 : 1u16) as u32;
     |                 ^^^^^^^^^^^^^^^^^
     |
     = Make both branches the same type.

DCE_DISABLED:
Error [ETYC0372118]: Received different types `u8` and `u16` for the arms of a ternary conditional.
    --> compiler-test:4:17
     |
   4 |         return (true ? 1u8 : 1u16) as u32;
     |                 ^^^^^^^^^^^^^^^^^
     |
     = Make both branches the same type.
